[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["S4ske <sany1111.ru@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gql = {extras = ["aiohttp"], version = "^3.5.0"}
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
